--- a/test.html
+++ b/test.html
@@ -34,15 +34,15 @@ namespace SyntaxHighlighter
   </pre>
   </code>
   
-  <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="jQuery.SyntaxHighlighter.js"></script>
-
   <script type="text/javascript" src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js"></script>
   <script type="text/javascript" src="http://alexgorbatchev.com/pub/sh/current/scripts/shBrushCSharp.js"></script>
   <script type="text/javascript">
     SyntaxHighlighter.config.space = '&#x20;';
   </script>
   
+	<!-- pattern 1 (global) -->
+  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="jQuery.SyntaxHighlighter.js"></script>
   <script type="text/javascript">
     $(function () {
       $(".sh").SyntaxHighlight("csharp", {
@@ -53,6 +53,36 @@ namespace SyntaxHighlighter
       });
     });
   </script>
+  
+  <!-- pattern 2 (amd) -->
+  <!--
+  <script type="text/javascript" src="node_modules/requirejs/require.js"></script>
+  <script type="text/javascript">
+  	require.config({
+  		paths: {
+  			jquery: 'node_modules/jquery/dist/jquery',
+  			jqsh: 'jQuery.SyntaxHighlighter'
+  		}
+  	});
+  	
+  	require([
+  		'jquery', 'jqsh'
+  	], function ($, _) {
+	    $(function () {
+	      $(".sh").SyntaxHighlight("csharp", {
+	        autoLinks: false,
+	        highlight: [7, 8, 9, 10],
+	        toolbar: false,
+	        quickCode: false
+	      });
+	    });
+  	});
+  </script>
+	-->
+	
+	<!-- pattern 3 (commonjs/browserify) -->
+	<!--
+	<script type="text/javascript" src="browserified.js"></script>
+	-->
 </body>
 </html>
-
